fix: use align-self:flex-start for always-mode sticky sidebar
Replaces height:100% with align-self:flex-start so position:sticky
works correctly in flex row context

--- a/src/assets/scss/theme/_blog.scss
+++ b/src/assets/scss/theme/_blog.scss
@@ -59,7 +59,7 @@ footer [class*="col-"] .widget + .widget {
   .sidebar.col-md-4:not(.sticky-sidebar) {
     position: sticky;
     top: 0;
-    height: 100%;
+    align-self: flex-start;
   }
 }
 
